tests/ui/match/postfix-match/pf-match-exhaustiveness.stderr
error[E0004]: non-exhaustive patterns: `Some(_)` not covered
  --> $DIR/pf-match-exhaustiveness.rs:4:5
   |
LL |     Some(1).match {
   |     ^^^^^^^ pattern `Some(_)` not covered
   |
note: `Option<i32>` defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL
  ::: $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `Option<i32>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         None => {},
LL ~         Some(_) => todo!(),
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
